iconsdir = $(staticdir)/icons
icons_DATA = back.png \
	     begin.png \
	     binary.png \
	     crosshairs.png \
	     down.png \
	     end.png \
	     favicon_sympa.png \
	     folder.open.png \
	     folder.png \
	     h.png \
	     image2.png \
	     junk.png \
	     left.png \
	     link.png \
	     locked.png \
	     logo-s-lock.png \
	     logo-s.png \
	     logo_sympa.png \
	     movie.png \
	     position.png \
	     right.png \
	     sound1.png \
	     sv.png \
	     text.png \
	     top.png \
	     unknown.png

EXTRA_DIST = $(icons_DATA)
